--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/library?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=user
+spring.datasource.password=password
+
+spring.jpa.properties.hibnernate.dialect=org.hibernate.dialect.MySQLDialect;
+
+spring.data.rest.base-path=/api
